Some tidy up. Adding a class to validate add methods and a utility class for random number generation. Also adding a check for if hardware acceleration is supported.

--- a/SimdSpike/SimdSpike.csproj
+++ b/SimdSpike/SimdSpike.csproj
@@ -57,8 +57,10 @@
   <ItemGroup>
     <Compile Include="HardwareAcceleratedArrayUnitTest.cs" />
     <Compile Include="HarewareAcceleratedArray.cs" />
+    <Compile Include="MethodValidation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
