--- a/SimdSpike/SimdSpike.csproj
+++ b/SimdSpike/SimdSpike.csproj
@@ -55,11 +55,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FloatSimdProcessor.cs" />
     <Compile Include="HardwareAcceleratedArrayUnitTest.cs" />
     <Compile Include="HarewareAcceleratedArray.cs" />
     <Compile Include="MethodValidation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UShortSimdProcessor.cs" />
     <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
